dist/LineScript-win64-20260616/tests/cases/compile_fail/if_not_bool.lsc
main() -> i64 do
  if 1 do
    return 1
  end
  return 0
end
